--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/khichuri.html">khichuri</a>
+        <ul>
+            <li><a href="recipes/khichuri.html">khichuri</a></li>
+            <li><a href="recipes/indokhichuri.html">indokhichuri</a></li>
+            <li><a href="recipes/pakkhichuri.html">pakkhichuri</a></li>
+        </ul>
+        
     </body>
 </html>
