--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="or">Odin Recipes</h1>
         <ul>
-            <li><a href="recipes/khichuri.html">khichuri</a></li>
+            <li><a href="recipes/newkhichuri.html">khichuri</a></li>
             <li><a href="recipes/indokhichuri.html">indokhichuri</a></li>
             <li><a href="recipes/pakkhichuri.html">pakkhichuri</a></li>
         </ul>
